--- a/about.html
+++ b/about.html
@@ -183,7 +183,7 @@
         
         <div class="flex-container">
             <div class="member-card">
-                <img src="member1.jpg" alt="Member 1">
+                <img src="member1.JPG" alt="Member 1">
                 <h4>Stella Marie C. Mateong</h4>
 				<p>Main code contributor, Media designer</p>
             </div>
