--- a/article2.html
+++ b/article2.html
@@ -220,7 +220,12 @@
 					In many countries, legislation lacks clear definitions of abuse or fails to cover all forms of harm, including emotional abuse and online exploitation. Even where laws exist, enforcement is often insufficient due to corruption, lack of funding, or poorly trained personnel. This lack of accountability allows perpetrators to escape justice. Another pressing issue is the lack of accessible resources for victims and families. 
 					Underfunded social services lead to overwhelmed workers who cannot provide adequate support to children in need. In rural or low-income areas, access to child protection services is further hindered by transportation challenges and the concentration of resources in urban centers. A lack of education and awareness compounds the problem—families and communities often do not recognize abuse or know how to seek help, leaving
 					many cases unreported. The consequences of these systemic failures are far-reaching. Weak laws and inadequate resources perpetuate a cycle of abuse, where children grow up in dangerous environments and are at risk of repeating harmful behaviors in adulthood if they do not receive the help they need. Addressing these challenges is crucial to breaking this cycle and protecting vulnerable children from ongoing harm.
-				</p>
+		</p>
+		<p>
+			References:
+			RAINN. (n.d.). Victims of sexual violence: Statistics. Retrieved December 2, 2024, from https://rainn.org/statistics/victims-sexual-violence
+			The Guardian. (2024, November 18). Gisele Pelicot trial: Children describe devastation caused by father. Retrieved December 2, 2024, from https://www.theguardian.com/world/2024/nov/18/gisele-pelicot-trial-children-devastation-caused-father
+		</p>
 			</div>
 			<br></br>
 			<div class="paragraph-container">
