--- a/article2.html
+++ b/article2.html
@@ -236,7 +236,10 @@
 		<p>
 			References:
 			RAINN. (n.d.). Victims of sexual violence: Statistics. Retrieved December 2, 2024, from https://rainn.org/statistics/victims-sexual-violence
-			The Guardian. (2024, November 18). Gisele Pelicot trial: Children describe devastation caused by father. Retrieved December 2, 2024, from https://www.theguardian.com/world/2024/nov/18/gisele-pelicot-trial-children-devastation-caused-father
+			The Guardian. (2024, November 18).
+		</p>
+		<p>
+			 Gisele Pelicot trial: Children describe devastation caused by father. Retrieved December 2, 2024, from https://www.theguardian.com/world/2024/nov/18/gisele-pelicot-trial-children-devastation-caused-father
 		</p>
 		</article>
 	</nav>
