--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 			<h2> View video here </h2>
 			<a href=https://www.youtube.com/watch?v=qgzEyaDGAkU> Watch video here </a>
 			<br></br>
-			<img src=thumbnail.webp height="200" width="300" alt="thumbnail of the video">
+			<img src="PHOTOS/thumbnail.webp" height="200" width="300" alt="thumbnail of the video">
 			<br></br>
 			<h2> View articles here </h2>
             <a href="content.html">Browse more articles</a> 
