--- a/content.html
+++ b/content.html
@@ -165,7 +165,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="logo.png" alt="Logo"> 
+        <img src="PHOTOS/logo.png" alt="Logo"> 
         <h1>Top Headlines</h1>
     </header>
     <nav class="nav">
@@ -186,15 +186,15 @@
         <section>
             <div class="article-links">
                 <article>
-                    <img src="kidnapped and raped.jpg" alt="Kidnapping Awareness" width="550" height="300">
+                    <img src="PHOTOS/kidnapped and raped.jpg" alt="Kidnapping Awareness" width="550" height="300">
                     <h3><a href="article1.html">How Individuals Are Kidnapped and Sexually Assaulted</a></h3>
                 </article>
                 <article>
-                    <img src="child-sexual-abuse-.webp" alt="Parents Awareness" width="550" height="300">
+                    <img src="PHOTOS/child-sexual-abuse-.webp" alt="Parents Awareness" width="550" height="300">
                     <h3><a href="article2.html">How Parents Sexually Assault Their Own Child</a></h3>
                 </article>
                 <article>
-                    <img src="necrophilia.jpg" alt="Necrophilia" width="550" height="300">
+                    <img src="PHOTOS/necrophilia.jpg" alt="Necrophilia" width="550" height="300">
                     <h3><a href="article3.html"> How Dead Corpse are not an Exception to Rapists</a></h3>
                 </article>
             </div>
