--- a/article2.html
+++ b/article2.html
@@ -164,7 +164,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="logo.png" alt="Logo">
+        <img src="PHOTOS/logo.png" alt="Logo">
         <h1>Top Headlines</h1>
     </header>
     <nav class="nav">
@@ -191,7 +191,7 @@
 					According to RAINN, millions of women in the United States have experienced rape, and young people aged 12 to 34 are the most vulnerable. Tragically, a significant portion of these cases involve perpetrators who are family members, including parents. Parental rape not only shatters the physical safety of children but also destroys the emotional and psychological foundation of trust essential for their development.
 					This form of abuse is often hidden due to shame, fear, and societal stigma, leaving many victims without support. To address the high rates of sexual violence in our culture, we must recognize the unique dynamics of familial abuse and create systems that empower victims to speak out and seek justice.
                 </p>
-                <img src="AdobeStock_348441886-1024x683.webp" alt="Sexually abused by parents" width="350" height="250">
+                <img src="PHOTOS/AdobeStock_348441886-1024x683.webp" alt="Sexually abused by parents" width="350" height="250">
             </div>
 
             <div class="paragraph-container">
@@ -206,7 +206,7 @@
 					of Dominique's crimes, they are united in their resolve to break societal silence around abuse. Gisèle and her children advocate for awareness and justice, turning their pain into a powerful message about the importance 
 					of speaking out and supporting survivors.”
                 </p>
-                <img src="Blog-Header-Child-Sexual-Abuse.jpg" alt="Sexually abused by parents" width="350" height="300">
+                <img src="PHOTOS/Blog-Header-Child-Sexual-Abuse.jpg" alt="Sexually abused by parents" width="350" height="300">
             </div>
             <div>
                 <p>
@@ -231,7 +231,7 @@
 			   risk and to hold offenders accountable, laws must be reinforced and upheld. Campaigns for education and awareness are necessary in communities to dispel the stigma associated with abuse and promote reporting. Above all, we need to give survivors strong support networks and the tools they need to recover and start over. Parental rape is a social disaster rather than merely a family one. We can make it so that no child has to live 
 			   in terror of those who are supposed to protect them by banding together to end the silence, address structural obstacles, and give victims more power. Understanding, empathy, and a steadfast dedication to justice are the first steps in combating this covert crime.
                 </p>
-                <img src="Sexually abused child.jpg" alt="Sexually abused by parents" width="350" height="250">
+                <img src="PHOTOS/Sexually abused child.jpg" alt="Sexually abused by parents" width="350" height="250">
 			</div>
 		<p>
 			References:
