--- a/article1.html
+++ b/article1.html
@@ -147,7 +147,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="logo.png" alt="Logo">
+        <img src="PHOTOS/logo.png" alt="Logo">
         <h1>Top Headlines</h1>
     </header>
     <nav class="nav">
@@ -166,7 +166,7 @@
         <h1>How Individuals Are Kidnapped and Sexually Harassed</h1>
         <article>
             <h2>By John Sebastian C. Solano - Created on November 27, 2024</h2>
-            <img src="kidnapped and raped.jpg" width="650" height="400" alt="Kidnapping Awareness">
+            <img src="PHOTOS/kidnapped and raped.jpg" width="650" height="400" alt="Kidnapping Awareness">
             <p>
 				Kidnapping and sexual assault are two of the most disturbing and devastating crimes, causing severe harm to victims physically, emotionally, and psychologically. Kidnapping, which involves the unlawful abduction and confinement of an individual, often leads to profound trauma as victims are stripped of their personal autonomy and safety. Similarly, sexual assault, encompassing any form of non-consensual sexual activity, is an invasive violation that leaves lasting emotional scars. Both crimes frequently involve power dynamics, where perpetrators seek to dominate and control their victims through violence and intimidation. For the victims, the impact can be far-reaching, manifesting in physical injuries, post-traumatic stress disorder (PTSD), anxiety, depression, and difficulty forming relationships. The social stigma attached to these crimes often leads to isolation, with victims feeling ashamed or blamed, which further complicates their ability to seek help.
             </p>
@@ -176,6 +176,12 @@
             <p>
 				The psychological toll of kidnapping and sexual assault extends far beyond the immediate trauma, often leaving survivors to contend with long-term emotional and mental health challenges. Victims may experience debilitating anxiety, nightmares, and flashbacks, as well as feelings of guilt and shame, even though they are never responsible for the actions of their abusers. These mental scars can interfere with everyday life, making it difficult for survivors to trust others or feel safe in their own environments. Many individuals struggle with self-esteem and self-worth, which can lead to isolation and difficulty forming or maintaining relationships. Additionally, the trauma can affect other aspects of life, such as work, education, and social interactions, as survivors may find it difficult to function normally in their day-to-day lives. For many, the road to recovery is long and requires ongoing therapy, support groups, and often medication to manage symptoms of PTSD, depression, and anxiety. It’s crucial for communities to create safe, supportive spaces where victims can find healing and understand that their experiences are not their fault. Understanding the depth of the emotional and psychological consequences of these crimes is key to offering survivors the compassionate care they need to rebuild their lives.
             </p>
+	    <p>
+		    References:
+	    </p>
+            <a href="index.html"></a>
+	    
+		
         </article>
     </div>
 
