--- a/about.html
+++ b/about.html
@@ -163,7 +163,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="logo.png" alt="Logo"> 
+        <img src="PHOTOS/logo.png" alt="Logo"> 
         <h1>Top Headlines</h1>
     </header>
     <nav class="nav">
@@ -183,27 +183,27 @@
         
         <div class="flex-container">
             <div class="member-card">
-                <img src="member1.JPG" alt="Member 1">
+                <img src="PHOTOS/member1.JPG" alt="Member 1">
                 <h4>Stella Marie C. Mateong</h4>
 				<p>Main code contributor, Media designer</p>
             </div>
             <div class="member-card">
-                <img src="member2.jpg" alt="Member 2">
+                <img src="PHOTOS/member2.jpg" alt="Member 2">
 				<h4>Chiara Renee B. Gevero </h4>
 				<p>Code contributor, Writer</p>
             </div>
             <div class="member-card">
-                <img src="member3.jpg" alt="Member 3">
+                <img src="PHOTOS/member3.jpg" alt="Member 3">
                 <h4>John Sebastian C. Solano</h4>
 				<p>Code contributor, Writer </p>
             </div>
             <div class="member-card">
-                <img src="member4.jpg" alt="Member 4">
+                <img src="PHOTOS/member4.jpg" alt="Member 4">
                 <h4>Twyla Anya P. Estella</h4>
 				<p>Media deisgner, Writer</p>
             </div>
             <div class="member-card">
-                <img src="member5.jpg" alt="Member 5">
+                <img src="PHOTOS/member5.jpg" alt="Member 5">
                 <h4>Risha Jelene C. Dauz</h4>
 				<p>Media deisgner</p>
             </div>
