--- a/article2.html
+++ b/article2.html
@@ -4,163 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How Parents Sexually Assault Their Child</title>
-    <link rel="stylesheet" type="text/css"> 
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            font-family: 'Georgia', serif, Arial, sans-serif;
-            line-height: 1.6;
-            background-color: #f9f9f9;
-            width: 100%;
-            margin: 0;
-        }
-
-        .header {
-            background-color: #491011;
-            padding: 30px;
-            color: white;
-            display: flex;
-            align-items: center;
-            text-align: center; 
-        }
-
-        .header img {
-            height: 60px;
-            margin-right: 15px;
-        }
-
-        .nav {
-            background-color: #661617;
-            padding: 15px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .nav ul {
-            list-style: none;
-            display: flex;
-        }
-
-        .nav li {
-            margin: 0 15px;
-        }
-
-        .nav a {
-            text-decoration: none;
-            color: white;
-            padding: 10px 15px;
-            border-radius: 5px;
-            transition: background 0.3s;
-        }
-
-        .nav a:hover {
-            background: #AA4A44;
-        }
-
-        .nav .nav-active {
-            background: #AA4A44;
-        }
-
-        .nav a:active {
-            background: #491011;
-            transition: background 0s;
-        }
-
-        .search-section {
-            display: flex;
-            align-items: center;
-        }
-
-        .search-input {
-            padding: 10px;
-            width: 200px;
-            border: 1px solid #aaa;
-            border-radius: 5px;
-        }
-
-        .search-button {
-            padding: 10px 15px;
-            border: none;
-            background-color: #333;
-            color: white;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-left: 5px;
-        }
-
-        .search-button:hover {
-            background-color: #555;
-        }
-
-        .main {
-            display: flex;
-            width: 100%;
-            justify-content: center; 
-        }
-
-        .content {
-            background-color: #ffffff;
-            color: #333;
-            padding: 40px;
-            width: 80%; 
-            border-radius: 8px;
-        }
-
-        .content h1 {
-            text-align: center;
-            font-size: 2.5em;
-            margin-bottom: 25px;
-            color: #491011;
-        }
-
-        .content h2 {
-            color: #333;
-            margin-top: 20px;
-        }
-
-        .content p {
-            margin-bottom: 20px;
-            text-align: justify;
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #491011;
-            color: white;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .paragraph-container {
-            display: flex; /* Align the paragraph and image side by side */
-            align-items: flex-start; /* Align the top of the content */
-            margin-bottom: 40px; /* Space between sections */
-        }
-
-        .paragraph-container p {
-            width: 70%; /* Paragraph takes up 65% of the container */
-            margin-right: 20px; /* Space between text and image */
-            text-align: justify; /* Justify the paragraph text */
-        }
-
-        .paragraph-container img {
-            object-fit: cover; 
-        }
-
-        .content {
-            width: 100%;
-            padding: 20px;
-        }
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="article2.css"> 
 </head>
 <body>
     <header class="header">
