--- a/article1.html
+++ b/article1.html
@@ -40,8 +40,9 @@
 	    <p>
 		    References:
 	    </p>
-            <a href="index.html"></a>
-	    
+            <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC9451059/"></a>
+            <br>
+	    <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC2627800/"></a>
 		
         </article>
     </div>
