--- a/article2.html
+++ b/article2.html
@@ -86,7 +86,8 @@
 			 Gisele Pelicot trial: Children describe devastation caused by father. Retrieved December 2, 2024, from https://www.theguardian.com/world/2024/nov/18/gisele-pelicot-trial-children-devastation-caused-father
 		</p>
 		</article>
-	</nav>
-
+	<footer>
+        <p>&copy; 2024 Top Headlines</p>
+        </footer>
 </body>
 </html>
