--- a/article1.html
+++ b/article1.html
@@ -40,10 +40,13 @@
 	    <p>
 		    References:
 	    </p>
-            <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC9451059/"></a>
+            <p>
+		National Sexual Violence Resource Center. (n.d.). Understanding sexual violence: What is sexual violence? Retrieved December 10, 2024, from https://www.nsvrc.org/understanding-sexual-violence
+            </p>
             <br>
-	    <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC2627800/"></a>
-		
+            <p>
+                Rape, Abuse & Incest National Network. (n.d.). Effects of sexual violence. Retrieved December 10, 2024, from https://www.rainn.org/effects-sexual-violence
+	    </p>
         </article>
     </div>
 
