--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="../PHOTOS/logo.png" alt="Logo"> 
+        <img src="PHOTOS/logo.png" alt="Logo"> 
         <h1>Top Headlines</h1>
     </header>
     <nav class="nav">
@@ -39,7 +39,7 @@
 			<h2> View video here </h2>
 			<a href=https://www.youtube.com/watch?v=qgzEyaDGAkU> Watch video here </a>
 			<br></br>
-			<img src="../PHOTOS/thumbnail.webp" height="200" width="300" alt="thumbnail of the video">
+			<img src="PHOTOS/thumbnail.webp" height="200" width="300" alt="thumbnail of the video">
 			<br></br>
 			<h2> View articles here </h2>
             <a href="content.html">Browse more articles</a> 
