--- a/html files/article1.html
+++ b/html files/article1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How Individuals Are Kidnapped and Sexually Harassed</title>
-    <link rel="stylesheet" type="text/css" href="article1.css"> 
+    <link rel="stylesheet" type="text/css" href="../css files/article1.css"> 
 </head>
 <body>
     <header class="header">
