--- a/html files/article1.html
+++ b/html files/article1.html
@@ -13,7 +13,7 @@
     </header>
     <nav class="nav">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a class="nav-active" href="content.html">Content</a></li> <!-- Link to Articles Page -->
             <li><a href="about.html">About</a></li>
         </ul>
