--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="css files/index.css">
     <title>Top Headlines</title>
 </head>
 <body>
@@ -14,8 +14,8 @@
     <nav class="nav">
         <ul>
             <li><a class="nav-active" href="#">Home</a></li> 
-            <li><a href="content.html">Content</a></li> 
-            <li><a href="about.html">About</a></li> 
+            <li><a href="html files/content.html">Content</a></li> 
+            <li><a href="html files/about.html">About</a></li> 
         </ul>
         <div class="search-section">
             <input type="text" class="search-input" placeholder="Search...">
