--- a/html files/content.html
+++ b/html files/content.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="content.css">
+    <link rel="stylesheet" type="text/css" href="css files/content.css">
     <title>Top Headlines</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
     </header>
     <nav class="nav">
         <ul>
-            <li><a href="index.html">Home</a></li> 
+            <li><a href="../index.html">Home</a></li> 
             <li><a class="nav-active" href="content.html">Content</a></li> <!-- Link to Articles Page -->
             <li><a href="about.html">About</a></li>
         </ul>
