--- a/html files/article3.html
+++ b/html files/article3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How Dead Corpse are not an Exception to Rapists</title>
-    <link rel="stylesheet" type="text/css" href="article3.css">
+    <link rel="stylesheet" type="text/css" href="../css files/article3.css">
 </head>
 <body>
     <header class="header">
