--- a/html files/article2.html
+++ b/html files/article2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How Parents Sexually Assault Their Child</title>
-    <link rel="stylesheet" type="text/css" href="article2.css"> 
+    <link rel="stylesheet" type="text/css" href="../css files/article2.css"> 
 </head>
 <body>
     <header class="header">
