--- a/html files/about.html
+++ b/html files/about.html
@@ -13,7 +13,7 @@
     </header>
     <nav class="nav">
         <ul>
-            <li><a href="index.html">Home</a></li> 
+            <li><a href="../index.html">Home</a></li> 
             <li><a href="content.html">Content</a></li>
             <li><a class="nav-active" href="about.html">About</a></li>
         </ul>
