--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h3>About our article</h3>
                 <div class="flex-container">
                     <p>The repercussions of teenage pregnancy can be significant and long-lasting for young mothers, who frequently experience disruptions in their education, reduced economic opportunities, and societal stigma. For many Indigenous girls, these obstacles are even more pronounced due to their limited access to reproductive health education, support networks, and healthcare services. By offering news articles, resources, and educational material, our goal is to raise awareness about these issues and engage in discussions about the ongoing initiatives to aid victims, advocate for justice, and lower the rates of teenage pregnancy. Through raising consciousness, we seek to help establish a safer and more supportive community for everyone.</p>
-                    <img class="right-image" src="../PHOTOS/picture1.jpg" alt="Description of the second image"> 
+                    <img class="right-image" src="PHOTOS/picture1.jpg" alt="Description of the second image"> 
                 </div>
             </div>
         </section>
@@ -42,7 +42,7 @@
 			<img src="PHOTOS/thumbnail.webp" height="200" width="300" alt="thumbnail of the video">
 			<br></br>
 			<h2> View articles here </h2>
-            <a href="content.html">Browse more articles</a> 
+            <a href="html files/content.html">Browse more articles</a> 
 		</section> 
     </main>
     <footer>
