--- a/html files/article1.html
+++ b/html files/article1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="../PHOTOS/logo.png" alt="Logo">
+        <img src="../PHOTOS/logo.png.url" alt="Logo">
         <h1>Top Headlines</h1>
     </header>
     <nav class="nav">
@@ -27,7 +27,7 @@
         <h1>How Individuals Are Kidnapped and Sexually Harassed</h1>
         <article>
             <h2>By John Sebastian C. Solano - Created on November 27, 2024</h2>
-            <img src="../PHOTOS/kidnapped and raped.jpg" width="650" height="400" alt="Kidnapping Awareness">
+            <img src="../PHOTOS/kidnapped and raped.jpg.url" width="650" height="400" alt="Kidnapping Awareness">
             <p>
 				Kidnapping and sexual assault are two of the most disturbing and devastating crimes, causing severe harm to victims physically, emotionally, and psychologically. Kidnapping, which involves the unlawful abduction and confinement of an individual, often leads to profound trauma as victims are stripped of their personal autonomy and safety. Similarly, sexual assault, encompassing any form of non-consensual sexual activity, is an invasive violation that leaves lasting emotional scars. Both crimes frequently involve power dynamics, where perpetrators seek to dominate and control their victims through violence and intimidation. For the victims, the impact can be far-reaching, manifesting in physical injuries, post-traumatic stress disorder (PTSD), anxiety, depression, and difficulty forming relationships. The social stigma attached to these crimes often leads to isolation, with victims feeling ashamed or blamed, which further complicates their ability to seek help.
             </p>
