--- a/html files/article3.html
+++ b/html files/article3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="../PHOTOS/logo.png" alt="Logo">
+        <img src="../PHOTOS/logo.png.url" alt="Logo">
         <h1>Top Headlines</h1>
     </header>
     <nav class="nav">
@@ -27,7 +27,7 @@
         <h1>How Dead Corpse are not an Exception to Rapists</h1>
         <article>
             <h2>By Twyla Anya P. Estella - Created on November 27, 2024</h2>
-            <img src="../PHOTOS/necrophilia.jpg" width="650" height="400" alt="Image representing necrophilia">
+            <img src="../PHOTOS/necrophilia.jpg.url" width="650" height="400" alt="Image representing necrophilia">
             <p>
                 Imagine a world where even in death, one’s body is not their own—a chilling reality that forces us to confront the darkest corners of human behavior. Necrophilia derived from the Greek words “Phillips” (love) and “nekros” (dead body) which basically means, the sexual attraction to corpses. It is one of society’s most taboo and misunderstood behaviors. This can be seen as an extreme form of objectification that disregards the dignity of the deceased and the trauma such actions inflict on their loved ones.
                 Legally, necrophilia is criminalized in most countries, considered both a desecration of human remains and an affront to public morality. According to Oxford Human Rights Hub (2023), “the court determined that this act does not qualify as rape under Section 375 of the Indian Penal Code (‘IPC’). This is because rape requires the involvement of a human being, and a dead body cannot be considered as such.”
