--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="PHOTOS/people.jpeg" alt="Logo"> 
+        <img src="PHOTOS/logo.png" alt="Logo"> 
         <h1>Top Headlines</h1>
     </header>
     <nav class="nav">
