--- a/html files/about.html
+++ b/html files/about.html
@@ -28,27 +28,27 @@
         
         <div class="flex-container">
             <div class="member-card">
-                <img src="../PHOTOS/member1.JPG.url" alt="Member 1">
+                <img src="../PHOTOS/member1.JPG" alt="Member 1">
                 <h4>Stella Marie C. Mateong</h4>
 				<p>Main code contributor, Media designer</p>
             </div>
             <div class="member-card">
-                <img src="../PHOTOS/member2.jpg.url" alt="Member 2">
+                <img src="../PHOTOS/member2.jpg" alt="Member 2">
 				<h4>Chiara Renee B. Gevero </h4>
 				<p>Code contributor, Writer</p>
             </div>
             <div class="member-card">
-                <img src="../PHOTOS/member3.jpg.url" alt="Member 3">
+                <img src="../PHOTOS/member3.jpg" alt="Member 3">
                 <h4>John Sebastian C. Solano</h4>
 				<p>Code contributor, Writer </p>
             </div>
             <div class="member-card">
-                <img src="../PHOTOS/member4.jpg.url" alt="Member 4">
+                <img src="../PHOTOS/member4.jpg" alt="Member 4">
                 <h4>Twyla Anya P. Estella</h4>
 				<p>Media deisgner, Writer</p>
             </div>
             <div class="member-card">
-                <img src="../PHOTOS/member5.jpg.url" alt="Member 5">
+                <img src="../PHOTOS/member5.jpg" alt="Member 5">
                 <h4>Risha Jelene C. Dauz</h4>
 				<p>Media deisgner</p>
             </div>
