--- a/html files/about.html
+++ b/html files/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="../PHOTOS/logo.png.url.png" alt="Logo"> 
+        <img src="../PHOTOS/logo.png" alt="Logo"> 
         <h1>Top Headlines</h1>
     </header>
     <nav class="nav">
