--- a/html files/content.html
+++ b/html files/content.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="../PHOTOS/logo.png.url" alt="Logo"> 
+        <img src="../PHOTOS/logo.png" alt="Logo"> 
         <h1>Top Headlines</h1>
     </header>
     <nav class="nav">
@@ -29,15 +29,15 @@
         <section>
             <div class="article-links">
                 <article>
-                    <img src="../PHOTOS/kidnapped and raped.jpg.url" alt="Kidnapping Awareness" width="550" height="300">
+                    <img src="../PHOTOS/picture3.jpeg" alt="Kidnapping Awareness" width="550" height="300">
                     <h3><a href="article1.html">How Individuals Are Kidnapped and Sexually Assaulted</a></h3>
                 </article>
                 <article>
-                    <img src="../PHOTOS/child-sexual-abuse-.webp.url" alt="Parents Awareness" width="550" height="300">
+                    <img src="../PHOTOS/picture1.jpeg" alt="Parents Awareness" width="550" height="300">
                     <h3><a href="article2.html">How Parents Sexually Assault Their Own Child</a></h3>
                 </article>
                 <article>
-                    <img src="../PHOTOS/necrophilia.jpg.url" alt="Necrophilia" width="550" height="300">
+                    <img src="../PHOTOS/picture2.jpeg" alt="Necrophilia" width="550" height="300">
                     <h3><a href="article3.html"> How Dead Corpse are not an Exception to Rapists</a></h3>
                 </article>
             </div>
